# azure_api

./: README.md
sntj_api/: .dockerignore  .gitignore  Dockerfile  azure_config.py  crud.py  database.py  hello.py  main.py  makefile  model.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_crud.py  test_main.py
sntj_api/sdk/: README.md  pyproject.toml
sntj_api/sdk/src/sntj/: __init__.py  sntj_client.py  sntj_config.py  test_sntj.py
