[build-system] 
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project] 
name = "sntj"
version = "0.1.1" 
authors = [
  { name="Sukush Kunwar" },
]
description = "This is a Python SDK for SNTJ API that provides a simple and efficient way to interact with the SNTJ API."
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha", 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
       'pytest>=8.1',
       'httpx>=0.27.0',
       'pydantic>=2.4.0',
       'backoff>=1.6.0',
       'pyarrow>=16.0',
       "loguru>=0.7.2",
      
   
]
